# ModelCart

./: .claudeignore  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  api_key.py  delivery_profile.py  order.py  order_log.py  product.py
backend/app/routers/: api_keys.py  products.py  search.py
backend/app/schemas/: api_keys.py  products.py  search.py
backend/app/services/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/tests/: conftest.py  test_auth.py  test_search.py
docs/: agent-commerce-spec.md
